--- a/release-plz.toml
+++ b/release-plz.toml
@@ -1,3 +1,3 @@
 [workspace]
-allow_dirty = true         # allow updating repositories with uncommitted changes
-publish_allow_dirty = true # add `--allow-dirty` to `cargo publish`
+allow_dirty = false         # allow updating repositories with uncommitted changes
+publish_allow_dirty = false # add `--allow-dirty` to `cargo publish`
