--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ reqwest = { version = "~0.12", features = [
     "http2",
 ], default-features = false }
 tokio = { version = "~1.40" }
+tower = "0.5.1"
 thiserror = "~1.0"
 serde_json = "~1.0"
 
