--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,19 +28,19 @@ prost-wkt = "~0.6"
 prost-wkt-types = { version = "~0.6" }
 serde = { version = "~1.0", features = ["derive"] }
 http = "1"
-veil = "~0.1"
+veil = "0.2"
 chrono = "~0.4"
 reqwest = { version = "~0.12", features = [
     "json",
     "rustls-tls",
     "http2",
 ], default-features = false }
-tokio = { version = "~1.40" }
+tokio = { version = "1.41.0" }
 thiserror = "~1.0"
 serde_json = "~1.0"
 
 [dev-dependencies]
-tokio = { version = "~1.40", features = ["full"] }
+tokio = { version = "1.41.0", features = ["full"] }
 mockito = "~1.5"
 
 [build-dependencies]
