--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,12 @@ resolver = "2"
 vendored-protoc = ["prost-wkt-types/vendored-protoc"]
 
 [dependencies]
-tonic = { version = "~0.12", features = ["tls"] }
+tonic = { version = "~0.12", features = [
+    "tls",
+    "tls-native-roots",
+    "gzip",
+    "zstd",
+] }
 prost = { version = "~0.13", features = ["std", "prost-derive"] }
 prost-types = "~0.13"
 prost-wkt = "~0.6"
