--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,36 +21,36 @@ resolver = "2"
 vendored-protoc = ["prost-wkt-types/vendored-protoc"]
 
 [dependencies]
-tonic = { version = "~0.12", features = [
+tonic = { version = "0.12", features = [
     "tls",
     "tls-native-roots",
     "gzip",
     "zstd",
 ] }
-prost = { version = "~0.13", features = ["std", "prost-derive"] }
-prost-types = "~0.13"
-prost-wkt = "~0.6"
-prost-wkt-types = { version = "~0.6" }
-serde = { version = "~1.0", features = ["derive"] }
+prost = { version = "0.13", features = ["std", "prost-derive"] }
+prost-types = "0.13"
+prost-wkt = "0.6"
+prost-wkt-types = { version = "0.6" }
+serde = { version = "1.0", features = ["derive"] }
 http = "1"
-veil = "~0.1"
-chrono = "~0.4"
-reqwest = { version = "~0.12", features = [
+veil = "0.1"
+chrono = "0.4"
+reqwest = { version = "0.12", features = [
     "json",
     "rustls-tls",
     "http2",
 ], default-features = false }
-tokio = { version = "~1.41" }
-thiserror = "~1.0"
-serde_json = "~1.0"
+tokio = { version = "1.41" }
+thiserror = "1.0"
+serde_json = "1.0"
 
 [dev-dependencies]
-tokio = { version = "~1.41", features = ["full"] }
-mockito = "~1.5"
+tokio = { version = "1.41", features = ["full"] }
+mockito = "1.5"
 
 [build-dependencies]
-tonic-build = { version = "~0.12" }
-prost-wkt-build = "~0.6"
+tonic-build = { version = "0.12" }
+prost-wkt-build = "0.6"
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
